src/fewshot/bof2/bof2_warning.txt
code.cpp:22:8: error: out of bounds access of "buff"
    buff[idx] = '\0';
     ^